--- a/src/index.css
+++ b/src/index.css
@@ -5,41 +5,36 @@
   --font-roboto: 'Roboto Variable', system-ui, Avenir, Helvetica, Arial, san-serif;
 }
 
-* { /* Selector Universal */
-  /* border: 1px solid chartreuse; */
-  margin: 0;
-  box-sizing: border-box;
+@layer base {
+  :root {
+    --font-playfair: 'Playfair Display Variable', system-ui, Avenir, Helvetica, Arial, sans-serif;
+    --font-roboto: 'Roboto Variable', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  }
+
+  * {
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  html {
+    font-size: 14px;
+  }
+
+  body {
+    font-family: "Open Sans", sans-serif;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  input {
+    font-size: inherit;
+  }
 }
-
-html { /* ROOT */
-  font-size: 14px;
-}
-
-body {
-  font-family: "Open Sans", sans-serif;
-
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-img {
-  /* TODO: RWD(Responsive Web Design) para imágenes */
-  max-width: 100%;
-  height: auto;
-}
-
-input {
-  font-size: inherit;
-
-}
-/* @font-face {
-    font-family: 'Playfair Display';
-    src: url('./assets/fonts/PlayfairDisplay-Regular.woff2') format('woff2'),
-        url('./assets/fonts/PlayfairDisplay-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-} */
